--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,7 @@ jobs:
         recipe:
           # !! Add your recipes here
           - recipe.yml
+          - my-fedora-kde.yml
     steps:
       # the build is fully handled by the reusable github action
       - name: Build Custom Image
