Update Monaspace font URL to version 1.301

--- a/recipes/modules/common.yml
+++ b/recipes/modules/common.yml
@@ -15,7 +15,7 @@ modules:
         - Monaspace
       url-fonts:
         - name: Monaspace-Variable
-          url: https://github.com/githubnext/monaspace/releases/latest/download/monaspace-v1.200.zip
+          url: https://github.com/githubnext/monaspace/releases/download/v1.301/monaspace-variable-v1.301.zip
 
   - type: brew
     brew-analytics: false
